<resources>
    <string name="app_name">OFixer Store</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">We are happy that you joined our community, and we are very interested with your opinion, suggestions and any more</string>
    <string name="fix_requests">Fix Requests</string>
    <string name="test">test</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="cost">Cost with L.E</string>
    <string name="duration">Fix Duration in Hours</string>
    <string name="guarantee">Guarantee Duration in Days</string>
    <string name="title_activity_client_main">ClientMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="intro_text">Join Ofix Community for repairing mobile phones online</string>
    <string name="title_activity_notif">NotifActivity</string>
    <string name="garuantee">garuantee</string>
    <string name="le">LE</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="fix_place">Fix Place</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="fix_phone">Fix Phone</string>
    <string name="title_accepted">Fixing Now</string>
    <string name="contact_with_your_client">Contact with your client</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="create_new_user">Add New Store</string>
    <string name="store_not_registered">Please add your store to ofix community</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_pass">Enter Password</string>
    <string name="db_error">Database Error</string>
    <string name="confirm_password">Confirm password</string>
    <string name="store_name">Store Name</string>
    <string name="mobile_number">Mobile Number</string>


    <string name="wait_stores_response">Wait Stores Response</string>
    <string name="choose_store_to_fix">Choose a store to Fix your phone</string>
    <string name="problem_fixed">Problem Fixed</string>
    <string name="store_fixing_your_mobile">Store going to fix your phone</string>
    <string name="problem_not_fixed">Problem Not Fixed</string>
    <string name="home_fix_cost">Home repairing Cost</string>
    <string name="store_fix_cost">Store repairing cost</string>
    <string name="address">Address</string>
    <string name="address_in_details">Address in details</string>
    <string name="pass_not_typical">your password not typical</string>
    <string name="enter_address">Write your address</string>
    <string name="password">Password</string>
    x
    <array name="guarntee_array">
        <item>All Life Guarntee</item>
        <item>No Guarntee</item>
        <item>1 Month</item>
        <item>2 Months</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>10 Months</item>
        <item>1 Year</item>
        <item>2 Years</item>
        <item>3 Years</item>
    </array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="send_to">Send To</string>
    <string name="navigate_to_cleint">Navigate to Cleint</string>
    <string name="call_client_now">Call Client Now</string>
    <string name="accepted_fixes">Accepted Fixes</string>
    <string name="history">History</string>
    <string name="about_app">About App</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>

</resources>
