<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/rounded_item_bg"
    android:orientation="vertical">

    <include layout="@layout/problem_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_with_your_client" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/item_db_navigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate_to_cleint" />

        <Button
            android:id="@+id/item_db_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_client_now" />

    </LinearLayout>
</LinearLayout>
