<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@drawable/empty_divider"
        android:dividerPadding="15dp"
        android:orientation="vertical"
        android:padding="4dp"
        android:showDividers="middle">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Changa-Regular"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/intro_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/grey" />


        <LinearLayout
            style="@style/container_linear"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical">


            <EditText
                android:id="@+id/login_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/mobile_number"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            style="@style/container_linear"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical">


            <EditText
                android:id="@+id/login_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>


        <Button
            android:id="@+id/login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/login" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/login_create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom|center"
        android:padding="@dimen/text_margin"
        android:text="@string/create_new_user"
        android:textStyle="bold" />
</LinearLayout>