<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/empty_divider"
        android:dividerPadding="15dp"

        android:orientation="vertical"
        android:padding="4dp"
        android:showDividers="middle">


        <LinearLayout
            style="@style/container_linear"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical">


            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/store_name"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            style="@style/container_linear"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical">


            <EditText
                android:id="@+id/signup_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_number"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            style="@style/container_linear"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical">


            <EditText
                android:id="@+id/signup_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="password"
                android:inputType="textPassword" />

        </LinearLayout>

  <LinearLayout
            style="@style/container_linear"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical">


            <EditText
                android:id="@+id/signup_cpw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

        </LinearLayout>


        <Button
            android:id="@+id/signup_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>
</LinearLayout>